2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/32_while_cond_and.deca
// Description :
//     test de ifThenElse   avec int 
// Resultats :
//    Erreur Contexteulle : ligne 12 : le type attendu est boolean
//     while avec condition : &&
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024
{
    while( 1==2 && 1!=3)
    {
        
    }
}