2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/55_ifThenelse_avec_int.deca
// Description :
//     test de ifThenElse   avec int 
// Resultats :
//    Erreur Contexteulle : ligne 10 : le type attendu est boolean
//
// Historique :
// cree le 01/01/2024

{
    if(1)
    {
        
    }
}